Modify crwling chanel

--- a/crawling-chanel.ipynb
+++ b/crawling-chanel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.chrome.webdriver.WebDriver (session=\"7d472ae294686f6dc75bf0df2226d91e\")>"
+       "<selenium.webdriver.chrome.webdriver.WebDriver (session=\"ac710ebaf0349db305746499cbf82a95\")>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -64,38 +64,48 @@
       "CHANEL 19 백의\n",
       "코드\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/chanel-19-bag-codes.html\n",
+      "2020년 10월 23일 금요일\n",
       "CHANEL 19 백\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/chanel-19-bag.html\n",
+      "2020년 10월 23일 금요일\n",
       "CHANEL 19 백\n",
       "캠페인\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/chanel-19-bag-campaign.html\n",
+      "2020년 10월 19일 월요일\n",
       "마린 백트\n",
       "칸 국제 시리즈 페스티벌\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/marine-vacth-canneseries-festival.html\n",
+      "2020년 10월 14일 수요일\n",
       "리나 쿠드리\n",
       "리옹 빛 축제\n",
       "오프닝 세레모니\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/lyna-khoudri-opening-lumiere-festival.html\n",
+      "2020년 10월 14일 수요일\n",
       "그랑 팔레에서 열린\n",
       "쇼의 하이라이트\n",
       "2021 봄-여름\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/show-highlight-from-the-grand-palais-ss21.html\n",
+      "2020년 10월 12일 월요일\n",
       "블레즈냐 민어와\n",
       "캐롤라인 드 매그레\n",
       "2021 봄-여름 쇼\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/blesnya-minher-spring-summer-21.html\n",
+      "2020년 10월 9일 금요일\n",
       "지드래곤과\n",
       "최서연\n",
       "2021 봄-여름 쇼\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/chn-g-dragon-sue-choi-alias.html\n",
+      "2020년 10월 9일 금요일\n",
       "계륜미와\n",
       "케빈 왕\n",
       "2021 봄-여름 쇼\n",
       "https://www.chanel.com/ko_KR/fashion/news/2020/10/gwei-lun-mei-spring-summer-21.html\n",
+      "2020년 10월 9일 금요일\n",
       "크리스틴 스튜어트와\n",
       "클레오 웨이드\n",
       "2021 봄-여름 쇼\n",
-      "https://www.chanel.com/ko_KR/fashion/news/2020/10/kristen-stewart-spring-summer-21.html\n"
+      "https://www.chanel.com/ko_KR/fashion/news/2020/10/kristen-stewart-spring-summer-21.html\n",
+      "2020년 10월 9일 금요일\n"
      ]
     }
    ],
@@ -109,7 +119,10 @@
     "    \n",
     "    # 링크 가져오기\n",
     "    link = cont.find_element_by_tag_name('a').get_attribute('href')\n",
-    "    print(link)\n"
+    "    print(link)\n",
+    "    \n",
+    "    date = cont.find_element_by_class_name('news-date').text\n",
+    "    print(date)\n"
    ]
   },
   {
@@ -206,6 +219,7 @@
    "source": [
     "title = []\n",
     "link = []\n",
+    "date = []\n",
     "start = time.time()\n",
     "\n",
     "while isFlag == True:\n",
@@ -222,6 +236,11 @@
     "            # 링크 가져오기\n",
     "            link.append(cont.find_element_by_tag_name('a').get_attribute('href'))\n",
     "#             print(link)\n",
+    "            \n",
+    "            date.append(cont.find_element_by_class_name('news-date').text\n",
+    "\n",
+    "\n",
+    "\n",
     "#     n += 1\n",
     "\n",
     "    time.sleep(30)\n",
@@ -244,83 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CHANEL 19 백의\\n코드</td>\n",
-       "      <td>https://www.chanel.com/ko_KR/fashion/news/2020...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CHANEL 19 백</td>\n",
-       "      <td>https://www.chanel.com/ko_KR/fashion/news/2020...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CHANEL 19 백\\n캠페인</td>\n",
-       "      <td>https://www.chanel.com/ko_KR/fashion/news/2020...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>마린 백트\\n칸 국제 시리즈 페스티벌</td>\n",
-       "      <td>https://www.chanel.com/ko_KR/fashion/news/2020...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>리나 쿠드리\\n리옹 빛 축제\\n오프닝 세레모니</td>\n",
-       "      <td>https://www.chanel.com/ko_KR/fashion/news/2020...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       title  \\\n",
-       "0           CHANEL 19 백의\\n코드   \n",
-       "1                CHANEL 19 백   \n",
-       "2           CHANEL 19 백\\n캠페인   \n",
-       "3       마린 백트\\n칸 국제 시리즈 페스티벌   \n",
-       "4  리나 쿠드리\\n리옹 빛 축제\\n오프닝 세레모니   \n",
-       "\n",
-       "                                                link  \n",
-       "0  https://www.chanel.com/ko_KR/fashion/news/2020...  \n",
-       "1  https://www.chanel.com/ko_KR/fashion/news/2020...  \n",
-       "2  https://www.chanel.com/ko_KR/fashion/news/2020...  \n",
-       "3  https://www.chanel.com/ko_KR/fashion/news/2020...  \n",
-       "4  https://www.chanel.com/ko_KR/fashion/news/2020...  "
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'chanel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-ae03370bf490>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mchanel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'chanel' is not defined"
+     ]
     }
    ],
    "source": [
@@ -885,20 +840,6 @@
     "#         photo = img.get_attribute('src')\n",
     "#         print(photo)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
