--- a/crawling_daum.ipynb
+++ b/crawling_daum.ipynb
@@ -451,7 +451,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'https://search.daum.net/search?nil_suggest=btn&w=news&cluster=y&q='+str(brand)+'&cpname='+str(magazine)+'&cp=16Y6Oklp6xw4QZhCK0&DA=PGD&p='+str(page)"
+   ]
   },
   {
    "cell_type": "code",
