preprocessing, textmining and networkx

--- a/crawling_marieclaire.ipynb
+++ b/crawling_marieclaire.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6994,7 +6994,7 @@
     "        link.append(cont.find_element_by_tag_name('a').get_attribute('href'))\n",
     "        \n",
     "        time.sleep(2)\n",
-    "print(title)\n",
+    "\n",
     "print(len(title), len(link))\n",
     "\n",
     "\n",
@@ -8254,39 +8254,293 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### check 확인"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    213\n",
+       "Name: check, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marie_ce['check'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "marie_ce['check'] = 0"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wnsgo\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(marie_ce)):\n",
+    "    if marie_ce['title_brand'][i] == 0:\n",
+    "        if not ('셀린' or '셀린느') in marie_ce['contents'][i]:\n",
+    "            marie_ce['check'][i] = 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    122\n",
+       "2     91\n",
+       "Name: check, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marie_ce['check'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>magazine</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>category</th>\n",
+       "      <th>title</th>\n",
+       "      <th>link</th>\n",
+       "      <th>date</th>\n",
+       "      <th>contents</th>\n",
+       "      <th>title_brand</th>\n",
+       "      <th>check</th>\n",
+       "      <th>why</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Ce</td>\n",
+       "      <td>celebrity</td>\n",
+       "      <td>Look At</td>\n",
+       "      <td>http://www.marieclairekorea.com/celebrity/2020...</td>\n",
+       "      <td>2020-11</td>\n",
+       "      <td>['', ' ', '화보 촬영을 즐기는 편인가? 노출도 약간 있었고, 무용 동작을 ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Ce</td>\n",
+       "      <td>lifestyle</td>\n",
+       "      <td>10월 넷째주, 11월 첫째주 #신작 추천</td>\n",
+       "      <td>http://www.marieclairekorea.com/lifestyle/2020...</td>\n",
+       "      <td>2020-11</td>\n",
+       "      <td>['10월 마지막주와 11월 첫째주,\\n새롭게 만나볼 수 있는\\n신작 12편을 모았...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Ce</td>\n",
+       "      <td>lifestyle</td>\n",
+       "      <td>오직, 여자의 이야기</td>\n",
+       "      <td>http://www.marieclairekorea.com/lifestyle/2020...</td>\n",
+       "      <td>2020-11</td>\n",
+       "      <td>['&lt;워터 릴리스&gt;&lt;톰보이&gt;에 이은 셀린 시아마 감독의 성장 영화. 엄마를 대신해 ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Ce</td>\n",
+       "      <td>fashion</td>\n",
+       "      <td>MASCULINE SCENE</td>\n",
+       "      <td>http://www.marieclairekorea.com/fashion/2020/1...</td>\n",
+       "      <td>2020-10</td>\n",
+       "      <td>['', '']</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Ce</td>\n",
+       "      <td>beauty</td>\n",
+       "      <td>2020 F/W BEAUTY TREND FORECAST – 2</td>\n",
+       "      <td>http://www.marieclairekorea.com/beauty/2020/10...</td>\n",
+       "      <td>2020-10</td>\n",
+       "      <td>['올가을에는 짙은 레드 립스틱 대신 마치 뱀파이어 영화 속 흡혈귀같은 다크 립스틱...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  magazine brand   category                               title  \\\n",
+       "0        M    Ce  celebrity                             Look At   \n",
+       "1        M    Ce  lifestyle             10월 넷째주, 11월 첫째주 #신작 추천   \n",
+       "2        M    Ce  lifestyle                         오직, 여자의 이야기   \n",
+       "3        M    Ce    fashion                     MASCULINE SCENE   \n",
+       "4        M    Ce     beauty  2020 F/W BEAUTY TREND FORECAST – 2   \n",
+       "\n",
+       "                                                link     date  \\\n",
+       "0  http://www.marieclairekorea.com/celebrity/2020...  2020-11   \n",
+       "1  http://www.marieclairekorea.com/lifestyle/2020...  2020-11   \n",
+       "2  http://www.marieclairekorea.com/lifestyle/2020...  2020-11   \n",
+       "3  http://www.marieclairekorea.com/fashion/2020/1...  2020-10   \n",
+       "4  http://www.marieclairekorea.com/beauty/2020/10...  2020-10   \n",
+       "\n",
+       "                                            contents  title_brand  check  why  \n",
+       "0  ['', ' ', '화보 촬영을 즐기는 편인가? 노출도 약간 있었고, 무용 동작을 ...            0      2  NaN  \n",
+       "1  ['10월 마지막주와 11월 첫째주,\\n새롭게 만나볼 수 있는\\n신작 12편을 모았...            0      0  NaN  \n",
+       "2  ['<워터 릴리스><톰보이>에 이은 셀린 시아마 감독의 성장 영화. 엄마를 대신해 ...            0      0  NaN  \n",
+       "3                                           ['', '']            0      2  NaN  \n",
+       "4  ['올가을에는 짙은 레드 립스틱 대신 마치 뱀파이어 영화 속 흡혈귀같은 다크 립스틱...            0      0  NaN  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marie_ce.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "marie_ce.to_csv('./magazine/marie_ce.csv', sep = '|', encoding = 'utf-8', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fashion        145\n",
+       "beauty          20\n",
+       "celebrity       18\n",
+       "runway          16\n",
+       "lifestyle        6\n",
+       "ad-campaign      4\n",
+       "향장               3\n",
+       "film             1\n",
+       "Name: category, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marie_ce['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marie_ce.loc[marie_ce['category'] == '%ed%96%a5%ec%9e%a5', 'category'] = '향장'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://www.marieclairekorea.com/%ed%96%a5%ec%9e%a5/2020/09/2020-f-w-%eb%b7%b0%ed%8b%b0-%ed%8a%b8%eb%a0%8c%eb%93%9c-%ed%94%84%eb%a6%ac%eb%b7%b0/'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marie_ce.loc[7, 'link']"
+   ]
   },
   {
    "cell_type": "code",
@@ -8312,7 +8566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
